# Cepheus

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: ARCHITECTURE.md
enumerator/: cepheus-enum.sh
src/cepheus/: __init__.py  cli.py  config.py
src/cepheus/engine/: __init__.py  analyzer.py  chainer.py  differ.py  matcher.py  poc_templates.py  scorer.py  technique_db.py
src/cepheus/importers/: __init__.py  nubicustos.py
src/cepheus/llm/: __init__.py  client.py  prompts.py
src/cepheus/models/: __init__.py  chain.py  posture.py  result.py  technique.py
src/cepheus/output/: __init__.py  diff_terminal.py  html_report.py  json_report.py  mitre_layer.py  terminal.py
tests/: conftest.py  test_cli.py  test_enumerator.py  test_importers.py
tests/test_engine/: test_analyzer.py  test_chainer.py  test_differ.py  test_matcher.py  test_scorer.py  test_technique_db.py
tests/test_llm/: test_llm_client.py
tests/test_models/: test_chain.py  test_posture.py  test_technique.py
tests/test_output/: test_html_report.py  test_json_report.py  test_mitre_layer.py
