[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cepheus"
version = "0.1.0"
description = "Container Escape Scenario Modeler — enumerate container security posture and model escape paths"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "su1ph3r" },
]
keywords = [
    "container",
    "security",
    "escape",
    "docker",
    "kubernetes",
    "container-escape",
    "container-security",
    "docker-security",
    "kubernetes-security",
    "penetration-testing",
    "red-team",
    "breakout",
    "privilege-escalation",
    "seccomp",
    "capabilities",
    "mitre-attack",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Typing :: Typed",
    "Environment :: Console",
]

[project.urls]
Homepage = "https://github.com/su1ph3r/Cepheus"
Repository = "https://github.com/su1ph3r/Cepheus"
Issues = "https://github.com/su1ph3r/Cepheus/issues"
Documentation = "https://github.com/su1ph3r/Cepheus/blob/main/docs/ARCHITECTURE.md"
dependencies = [
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "typer>=0.12,<1.0",
    "rich>=13.0,<14.0",
]

[project.optional-dependencies]
llm = [
    "litellm>=1.40,<2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
cepheus = "cepheus.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/cepheus"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"
